# synlynk

./: .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  GEMINI.md  GROK.md  LICENSE  README.md  index.html  install.sh  pyproject.toml  pytest.ini  synlynk-vision.md  synlynk_costs.md
.agents/: support.json
.github/: pull_request_template.md
about/: index.html
agents/: claude.json  codex.json  grok.json
assets/css/: main.css
blog/: index.html
changelog/: index.html
docs/: claude-human-agent-hybrid-workgroup-study.md  codex-human-agent-hybrid-workgroup-study.md  codex-integration-proposals.md  codex-synlynk-preferred-roadmap.md  hybrid-ide-cascade-pattern.md  index.html  live-issue-handling-sop.md  multi-agent-orchestration-proposal.md  native-codex-implementation-plan.md  synlynk-command-reference.html  synlynk-gemini-human-agent-hybrid-workgroup-study.md  synlynk-official-reference.html  synlynk-quickstart-apple.html  synlynk-quickstart-guide.html
features/: index.html
project-docs/: costs.md  memory.md  repo-evaluation-report.md  roadmap.md  todo.md
releases/: index.html
site/: .eleventy.js
synlynk/: __init__.py  __main__.py
synlynk-website-v1-arch/: .eleventy.js  package-lock.json  package.json
tests/: conftest.py  test_capability_scoring.py  test_e2e.py  test_harness_compatibility.py  test_instruction_reach.py  test_launch.py  test_migrate.py  test_packaging.py  test_roles.py  test_static_scan.py  test_synlynk.py  test_wizard.py  test_workspace_scan.py
website/: .eleventy.js  .gitignore  README.md  package-lock.json  package.json
(+434 files in other folders)
